--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="alternate" hreflang="en" href="https://lekitable.fr">
+<link rel="alternate" hreflang="fr" href="https://fr.lekitable.fr">
+<script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
+<script>
+    Weglot.initialize({
+        api_key: 'wg_e7b363d21633cb14e7b6c903d1805ede6'
+    });
+</script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400" rel="stylesheet">
   <meta charset="utf-8">
   <!-- Always force latest IE rendering engine or request Chrome Frame -->
