--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         api_key: 'wg_e7b363d21633cb14e7b6c903d1805ede6'
     });
 </script>
+<link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+	<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400" rel="stylesheet">
   <meta charset="utf-8">
   <!-- Always force latest IE rendering engine or request Chrome Frame -->
