--- a/404.html
+++ b/404.html
@@ -34,7 +34,8 @@
   <!-- HEADER -->
   <header class="header clearfix">
     <div id="photo" style="text-align: center">
-      <img width="100" src="/android-chrome-192x192.png" alt="Lekitable Logo">
+      <a href="/">
+      <img width="100" src="/android-chrome-192x192.png" alt="Lekitable Logo"></a>
     </div>
   </header><!-- EPILOGUE -->
   <section class="epilogue">
