--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class="content">
       <h1>WHAT WAS LEKITABLE ?</h1>
       <h2>Our story</h2>
-      <p>JULES TEXT.</p>
+      <p>JULES TEXT</p>
     </div>
   </section><!-- NUMBERS -->
   <section class="numbers">
