google tag added

--- a/404.html
+++ b/404.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KEDMT6B0Q4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KEDMT6B0Q4');
+</script>
 <link rel="alternate" hreflang="en" href="https://lekitable.fr">
 <link rel="alternate" hreflang="fr" href="https://fr.lekitable.fr">
 <script type="text/javascript" src="https://cdn.weglot.com/weglot.min.js"></script>
